Make "desc" pointer non-constant inside the mlx5_core_diagnostics_entry structure. This fixes compilation with amd64-xtoolchain-gcc.

PR:			216588
MFC after:		1 week
Sponsored by:		Mellanox Technologies


git-svn-id: svn+ssh://svn.freebsd.org/base/head@312983 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f